[gd_scene load_steps=14 format=2]

[ext_resource path="res://roda-assets/Props/pedestrian_lights_front_green.png" type="Texture" id=1]
[ext_resource path="res://roda-assets/Props/pedestrian_lights_front_red.png" type="Texture" id=2]
[ext_resource path="res://roda-assets/Props/pedestrian_lights_side_red.png" type="Texture" id=3]
[ext_resource path="res://roda-assets/Props/pedestrian_lights_side_green.png" type="Texture" id=4]
[ext_resource path="res://roda-assets/Props/pedestrian_lights_UI_green.png" type="Texture" id=5]
[ext_resource path="res://roda-assets/Props/pedestrian_lights_UI_red.png" type="Texture" id=6]
[ext_resource path="res://src/traffic/PedestrianLight.gd" type="Script" id=7]
[ext_resource path="res://roda-assets/Props/pedestrian_lights_back.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "green",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "red",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "green",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "red",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "green",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "red",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "green",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "red",
"speed": 5.0
} ]

[node name="PedestrianLight" type="StaticBody2D"]
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [ -59.9966, -32.0656 ]
}

[node name="AnimatedFront" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "red"
playing = true
offset = Vector2( 0, -30 )

[node name="AnimatedBack" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 5 )
animation = "green"
offset = Vector2( 0, -29 )

[node name="AnimatedSide" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
animation = "red"
playing = true
offset = Vector2( 10, -29 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Node2D" type="Node2D" parent="."]

[node name="AnimatedUI" type="AnimatedSprite" parent="Node2D"]
visible = false
frames = SubResource( 4 )
animation = "red"
playing = true
offset = Vector2( -26, -45 )
